Overflow fix

--- a/game/index.css
+++ b/game/index.css
@@ -23,6 +23,7 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 main {
